Adding Asynchronous Methods and Delete Commands
The asynchronous methods `UpdateAsync` and `DeleteAsync` have been added to the `IGenericRepository` interface and their implementation in `GenericRepository`. The `Ticketing.Core.Domain.SeedWork` project has been updated to `1.2.1`.

New commands and handlers for deleting users have been introduced, along with their validator. Unit tests have also been added to ensure that user deletion works correctly.

In addition, changes have been made to `swagger.json` to reflect the new delete operations, and package references have been updated in several projects.
